# scf

./: .gitignore  CMakeLists.txt  README.md
asm/: 1.s  Makefile  main.c  naja.s  scf_asm.c  scf_asm.h  scf_dfa_asm.c  scf_dfa_inst.c  scf_dfa_naja.c  scf_dfa_x64.c  shellcode.s
core/: scf_3ac.c  scf_3ac.h  scf_ast.c  scf_ast.h  scf_auto_gc_3ac.c  scf_auto_gc_find.c  scf_basic_block.c  scf_basic_block.h  scf_block.c  scf_block.h  scf_core_types.h  scf_dag.c  scf_dag.h  scf_expr.c  scf_expr.h  scf_function.c  scf_function.h  scf_label.c  scf_lex_word.c  scf_lex_word.h  scf_node.c  scf_node.h  scf_operator.c  scf_operator.h  scf_operator_dag.c  scf_operator_handler.h  scf_operator_handler_3ac.c  scf_optimizer.c  scf_optimizer_active_vars.c  scf_optimizer_auto_gc.c  scf_optimizer_auto_gc_find.c  scf_optimizer_basic_block.c  scf_optimizer_call.c  scf_optimizer_common_expr.c  scf_optimizer_const_teq.c  scf_optimizer_dag.c  scf_optimizer_dominators.c  scf_optimizer_dominators_reverse.c  scf_optimizer_generate_loads_saves.c  scf_optimizer_group.c  (+16 more)
coroutine/: Makefile  main.c  scf_coroutine.c  scf_coroutine.h  scf_coroutine_asm.S  scf_coroutine_run.c
docs/: Naja_float.txt  Naja_int.txt  Naja_sys.txt  Naja_vector.txt
elf/: scf_dwarf.c  scf_dwarf.h  scf_dwarf_abbrev.c  scf_dwarf_info.c  scf_dwarf_line.c  scf_elf.c  scf_elf.h  scf_elf_arm32.c  scf_elf_arm32.h  scf_elf_arm32_so.c  scf_elf_arm64.c  scf_elf_arm64.h  scf_elf_arm64_so.c  scf_elf_link.c  scf_elf_link.h  scf_elf_naja.c  scf_elf_naja.h  scf_elf_naja_so.c  scf_elf_native.h  scf_elf_native32.c  scf_elf_x64.c  scf_elf_x64.h  scf_elf_x64_so.c
examples/: array_pointer_opt2.c  assert.c  auto_gc_0.c  auto_gc_1.c  auto_gc_multi_rets.c  bit_struct.c  common_expr.c  complex.c  coroutine_fmt.c  coroutine_printf.c  enum.c  enum2.c  float_cmp.c  float_inc.c  fopen.c  for.c  for2.c  free.c  init_array_reshape.c  init_struct_array.c  inline.c  list_test.c  macro.c  macro_args.c  macro_str.c  main_argv.c  mat.c  mat_mul_strassen.c  member_array0.c  number.c  oop.c  pointer_add_assign.c  pointer_inc.c  pointer_opt2.c  recursive_pointer.c  ret2_err.c  str.c  string.c  struct_array.c  struct_pointer_opt.c  (+5 more)
lex/: CMakeLists.txt  scf_lex.c  scf_lex.h  scf_lex_test.c  scf_lex_util.c
lib/: _start.s  scf_capi.c  scf_complex.c  scf_string.c
native/: scf_instruction.c  scf_instruction.h  scf_native.c  scf_native.h
native/eda/: scf_eda.c  scf_eda.h  scf_eda_inst.c  scf_eda_pack.c  scf_eda_pack.h
native/risc/: scf_naja.c  scf_naja_inst.c  scf_naja_reg.c  scf_risc.c  scf_risc.h  scf_risc_inst.c  scf_risc_opcode.c  scf_risc_opcode.h  scf_risc_rcg.c  scf_risc_reg.h  scf_risc_reg_naja.c  scf_risc_util.h
native/x64/: scf_x64.c  scf_x64.h  scf_x64_bb_color.c  scf_x64_inst.c  scf_x64_inst_binary.c  scf_x64_inst_cmp.c  scf_x64_inst_common.c  scf_x64_inst_div.c  scf_x64_inst_mul.c  scf_x64_inst_shift.c  scf_x64_inst_unary.c  scf_x64_inst_util.c  scf_x64_opcode.c  scf_x64_opcode.h  scf_x64_peephole.c  scf_x64_rcg.c  scf_x64_reg.c  scf_x64_reg.h  scf_x64_reg_util.c  scf_x64_reg_util.h  scf_x64_util.h
pack/: scf_pack.c
parse/: CMakeLists.txt  Makefile  main.c  scf_dfa.c  scf_dfa.h  scf_dfa_async.c  scf_dfa_block.c  scf_dfa_break.c  scf_dfa_call.c  scf_dfa_class.c  scf_dfa_container.c  scf_dfa_continue.c  scf_dfa_create.c  scf_dfa_do.c  scf_dfa_enum.c  scf_dfa_expr.c  scf_dfa_for.c  scf_dfa_function.c  scf_dfa_goto.c  scf_dfa_identity.c  scf_dfa_if.c  scf_dfa_include.c  scf_dfa_init_data.c  scf_dfa_label.c  scf_dfa_macro.c  scf_dfa_new.c  scf_dfa_operator.c  scf_dfa_parse.c  scf_dfa_return.c  scf_dfa_sizeof.c  scf_dfa_switch.c  scf_dfa_type.c  scf_dfa_union.c  scf_dfa_util.h  scf_dfa_va_arg.c  scf_dfa_var.c  scf_dfa_while.c  scf_operator_handler_const.c  scf_operator_handler_const.h  scf_operator_handler_expr.c  (+7 more)
util/: scf_def.h  scf_list.h  scf_rbtree.c  scf_rbtree.h  scf_string.c  scf_string.h  scf_vector.h
vm/: Makefile  main.c  scf_vm.h  scf_vm_naja.c  scf_vm_naja_asm.c
